# oh-my-class-schedule

./: .gitignore  README.md  READYOU.md  index.html  inspect_xls.py  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html  script.js  xlsx.full.min.js  参考格式.txt
docs/adapters/: template.js  湖南大学.js
docs/css/: google_fonts.css  style.css
scripts/: release.py  update_version.py  update_web_tools.py
src/: App.vue  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  parser.rs
src/components/: CourseCard.vue  ScheduleGrid.vue
tests/HNU/: adapter_most_recent_output.txt  课表.xls
