[package]
name = "oh-my-class-schedule"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "oh_my_class_schedule_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde_json = "1"
tauri-plugin-process = "2"
window-vibrancy = "0.7.1"

[build-dependencies.tauri-build]
version = "2"
features = []

[dependencies.tauri]
version = "2"
features = []

[dependencies.serde]
version = "1"
features = ["derive"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"   # Strip panic symbols
codegen-units = 1 # Compile more slowly but better optimization
lto = true        # Link time optimization
opt-level = "z"   # Optimize for size
strip = true      # Strip symbols
